# String

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: String.h
src/: String.c
test/: String_append.c  String_endsWith.c  String_equals.c  String_prepend.c  String_splitByWhitespace.c  String_startsWith.c  String_substring.c  String_trimLeadingWhitespace.c  TestString.c
